# simple_torrent

./: .gitignore  README.md  pubspec.yaml
android/: build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
android/src/main/cpp/: CMakeLists.txt  torrent_core.cpp  torrent_core.hpp  torrent_plugin.cpp
build_scripts/: build_android_arm64-v8a.ps1  build_android_armabi-v7a.ps1  build_android_x86_64.ps1  build_libtorrent.bat  generate_bcp_tree.ps1
example/: README.md  pubspec.yaml
example/android/: build.gradle.kts  settings.gradle.kts
example/android/app/: build.gradle.kts
example/integration_test/: plugin_integration_test.dart
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/ios/RunnerTests/: RunnerTests.swift
example/lib/: main.dart
example/linux/: CMakeLists.txt
example/linux/runner/: my_application.cc
example/macos/Flutter/: GeneratedPluginRegistrant.swift
example/macos/Runner.xcodeproj/: project.pbxproj
example/macos/RunnerTests/: RunnerTests.swift
example/test/: widget_test.dart
example/windows/: CMakeLists.txt
example/windows/runner/: Runner.rc  main.cpp
ios/: simple_torrent.podspec
ios/Classes/: SimpleTorrentPlugin.swift
lib/: simple_torrent.dart  simple_torrent_method_channel.dart  simple_torrent_platform_interface.dart
linux/: CMakeLists.txt  simple_torrent_plugin.cc  simple_torrent_plugin_private.h
linux/include/simple_torrent/: simple_torrent_plugin.h
linux/test/: simple_torrent_plugin_test.cc
macos/: simple_torrent.podspec
macos/Classes/: SimpleTorrentPlugin.swift
test/: simple_torrent_method_channel_test.dart  simple_torrent_test.dart
windows/: CMakeLists.txt  simple_torrent_plugin.cpp  simple_torrent_plugin.h  simple_torrent_plugin_c_api.cpp
windows/include/simple_torrent/: simple_torrent_plugin_c_api.h
windows/test/: simple_torrent_plugin_test.cpp
(+6 files in other folders)
